Fixed Picture cropping

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,8 +25,7 @@
     gap: 40px;
     justify-content: center;
     margin-top: auto;
-    background-color: #2E4057;
-    border-radius: 20px;
+    background-color: #172439;
 }
 
 .div1 photos_div {
